Nudge to get the docs site built..

--- a/src/SCClassicalPlanning.Documentation/Pages/Roadmap.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/Roadmap.razor
@@ -14,7 +14,7 @@ There is of course potential for this to conflict with the main goal - by abstra
 
 <h2>Pre-V1</h2>
 
-<p>Stuff I want to do before ticking the major version number to 1:</p>
+<p>Stuff I want to do before ticking the version number to 1.0:</p>
 
 <ul>
   <li>
