--- a/src/SCClassicalPlanning.Documentation/Pages/Index.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/Index.razor
@@ -5,7 +5,7 @@
 <h1>Home</h1>
 
 <p>Basic but fully functional and documented <a href="https://www.google.com/search?q=classical+planning">classical planning</a> implementations.
-  Somewhat influenced by chapter 10 of _Artificial Intelligence: A Modern Approach_ (3rd Edition - <a href="https://www.google.com/search?q=isbn+978-1292153964">ISBN 978-1292153964</a>.
+  Somewhat influenced by chapter 10 of <em>Artificial Intelligence: A Modern Approach (3rd Edition - <a href="https://www.google.com/search?q=isbn+978-1292153964">ISBN 978-1292153964</a>)</em>.
 Intended first and foremost to assist with learning and experimentation, but will (by the time v1 arrives) include extension points (and async support) so that it is at least conceivable that it could be (extended to be) useful in a production scenario.
 Includes:</p>
 
