--- a/src/SCClassicalPlanning.Documentation/Shared/NavMenu.razor
+++ b/src/SCClassicalPlanning.Documentation/Shared/NavMenu.razor
@@ -25,6 +25,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="utilities">
+                <span class="bi bi-play-btn" aria-hidden="true"></span> Utilities
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="roadmap">
                 <span class="bi bi-signpost-split-fill" aria-hidden="true"></span> Roadmap
             </NavLink>
