--- a/src/SCClassicalPlanning.Documentation/Pages/Utilities/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/Utilities/StateSpaceExplorer.razor
@@ -11,7 +11,7 @@
     The author is more of a back-end guy, for now.
     Will likely improve on it gradually whenever the mood takes me.
     Who knows, might even add some pretty graph visualisation stuff at some point.
-    Anyway, below is a list of all edges on the currently explored path from the initial state of the problem.
+    Anyway, below is a list of all edges on the currently explored path from the initial state of the problem (the problem being the standard Sussman anomaly example in a three-block "blocks world").
     Explore an edge (adding it to the end of the current path) by clicking on the appropriate action.
     <a href="#" @onclick="@(() => { PathToCurrentNode.Clear(); })" @onclick:preventDefault="true" @onclick:stopPropagation="true">[Reset]</a>
 </p>
