--- a/src/SCClassicalPlanning.Documentation/Pages/Utilities/Index.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/Utilities/Index.razor
@@ -3,5 +3,5 @@
 <h1>Utilities</h1>
 
 <ul>
-    <li><a href="state-space-explorer">State space explorer - blocks world</a></li>
+    <li><a href="utilities/state-space-explorer">State space explorer - blocks world</a></li>
 </ul>
