--- a/src/SCClassicalPlanning.Documentation/Pages/Utilities/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/Utilities/StateSpaceExplorer.razor
@@ -3,41 +3,45 @@
 @using SCClassicalPlanning
 @using SCClassicalPlanning.ExampleDomains.FromAIaMA;
 @using SCClassicalPlanning.Planning.StateAndGoalSpace;
+@using SCClassicalPlanning.Planning.Utilities;
+@using SCFirstOrderLogic.Inference.BackwardChaining;
+@using SCFirstOrderLogic.Inference;
+@using SCFirstOrderLogic;
+@using static SCFirstOrderLogic.SentenceCreation.SentenceFactory;
 
 <h3>State Space Explorer - Blocks World</h3>
 
 <p>
-    Yes, this is ugly and raw.
-    Will improve on it gradually whenever the mood takes me.
-    Starting from the initial state of the problem (the problem being the "blocks world" Sussman anomaly example depicted in the package icon), explore the state space by clicking on the action to apply.
+    Yes, this is ugly and raw - will improve on it gradually.
+    Starting from the initial state of the problem (the problem being hard-coded as the "blocks world" Sussman anomaly example depicted in the package icon for the mo), explore the state space by clicking on the action to apply.
     NB: Collapses down the loop if the same edge is navigated twice. 
-    <a href="#" @onclick="@(() => { Path.Clear(); })" @onclick:preventDefault="true" @onclick:stopPropagation="true">[Reset]</a>
+    <a href="#" @onclick="@(() => { path.Clear(); })" @onclick:preventDefault="true" @onclick:stopPropagation="true">[Reset]</a>
 </p>
 
 <ul>
     <li>
-        @Problem.InitialState
+        @RenderState(problem.InitialState)
         <ul>
-            @foreach (var edge in RootNode.Edges)
+            @foreach (var possibleEdge in RootNode.Edges)
             {
                 <li>
                     <a href="#"
-                       style="@(edge.Equals(Path.First?.Value) ? "font-weight:bold" : "")"
-                       @onclick="@(() => { Path.Clear(); Path.AddLast(edge); })" 
+                       style="@(possibleEdge.Equals(path.First?.Value) ? "font-weight:bold" : "")"
+                       @onclick="@(() => { path.Clear(); path.AddLast(possibleEdge); })" 
                        @onclick:preventDefault="true" 
-                       @onclick:stopPropagation="true">@edge.ToString()</a>
+                       @onclick:stopPropagation="true">@possibleEdge.ToString()</a>
                 </li>
             }
         </ul>
     </li>
 
-    @for (var n = Path.First; n != null; n = n.Next)
+    @for (var n = path.First; n != null; n = n.Next)
     {
         var edge = n.Value;
         var nextExploredEdge = n.Next?.Value;
 
         <li>
-            @edge.To.State
+            @RenderState(edge.To.State)
             <ul>
                 @foreach (var possibleEdge in edge.To.Edges)
                 {
@@ -55,22 +59,38 @@
 </ul>
 
 @code {
-    private readonly LinkedList<StateSpaceEdge> Path = new();
-    private readonly Problem Problem = BlocksWorld.ExampleProblem;
+    private readonly LinkedList<StateSpaceEdge> path = new();
+    private readonly Problem problem = BlocksWorld.ExampleProblem;
+    ////private readonly InvariantInspector invariants = new(new BackwardChainingKnowledgeBase(new DictionaryClauseStore(new[]
+    ////{
+    ////    ForAll(X, AreEqual(X, X)),
+    ////    BlocksWorld.Block(new Constant("blockA")),
+    ////    BlocksWorld.Block(new Constant("blockB")),
+    ////    BlocksWorld.Block(new Constant("blockC")),
+    ////})));
 
-    private StateSpaceNode RootNode => new(Problem, Problem.InitialState);
+    private StateSpaceNode RootNode => new(problem, problem.InitialState);
 
     private void ExploreEdge(StateSpaceEdge priorEdge, StateSpaceEdge edge)
     {
-        var currentLLNode = Path.Find(priorEdge);
+        var currentLLNode = path.Find(priorEdge);
         if (currentLLNode != null)
         {
             while (currentLLNode.Next != null)
             {
-                Path.Remove(currentLLNode.Next);
+                path.Remove(currentLLNode.Next);
             }
         }
 
-        Path.AddLast(edge);
+        path.AddLast(edge);
+    }
+
+    private string RenderState(State state)
+    {
+        var elements = state.Elements
+            ////.Where(e => !invariants.IsTrivial(e))
+            .OrderBy(e => e.Symbol.ToString())
+            .ThenBy(e => string.Join(",", e.Arguments.Select(a => a.ToString())));
+        return string.Join(" ∧ ", elements);
     }
 }
