--- a/src/SCClassicalPlanning.Documentation/Shared/NavMenu.razor
+++ b/src/SCClassicalPlanning.Documentation/Shared/NavMenu.razor
@@ -25,8 +25,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="utilities">
-                <span class="bi bi-play-btn" aria-hidden="true"></span> Utilities
+            <NavLink class="nav-link" href="tools">
+                <span class="bi bi-tools" aria-hidden="true"></span> Tools
             </NavLink>
         </div>
         <div class="nav-item px-3">
