docs site updates

--- a/src/SCClassicalPlanning.Documentation/Pages/Tools/Index.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/Tools/Index.razor
@@ -2,6 +2,8 @@
 
 <h2>Tools</h2>
 
+<p>This page serves as an index for some tools (though "demos" or "toys" might be more apt descriptions) that make use of SCClassicalPlanning.</p>
+
 <ul>
-    <li><a href="tools/state-space-explorer">State space explorer - blocks world</a></li>
+    <li><a href="tools/state-space-explorer">State space explorer - blocks world</a>: An demonstration of the state space representation types to be found in the `SCClassicalPlanning.Planning.StateAndGoalSpace` namespace.</li>
 </ul>
