--- a/src/SCClassicalPlanning.Documentation/Pages/Tools/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/Tools/StateSpaceExplorer.razor
@@ -12,9 +12,11 @@
 <h3>State Space Explorer - Blocks World</h3>
 
 <p>
+    An demonstration of the state space representation types to be found in the `SCClassicalPlanning.Planning.StateAndGoalSpace` namespace.
     Yes, this is ugly and raw - will improve on it gradually.
     Starting from the initial state of the problem (the problem being hard-coded as the "blocks world" Sussman anomaly example depicted in the package icon for the mo), explore the state space by clicking on the action to apply.
     NB: Collapses down the loop if the same edge is navigated twice. 
+    <a href="https://github.com/sdcondon/SCClassicalPlanning/blob/main/src/SCClassicalPlanning.Documentation/Pages/Tools/StateSpaceExplorer.razor">[Source]</a>
     <a href="#" @onclick="@(() => { path.Clear(); })" @onclick:preventDefault="true" @onclick:stopPropagation="true">[Reset]</a>
 </p>
 
