--- a/src/SCClassicalPlanning.Documentation/Shared/NavMenu.razor
+++ b/src/SCClassicalPlanning.Documentation/Shared/NavMenu.razor
@@ -34,6 +34,11 @@
                 <span class="bi bi-signpost-split-fill" aria-hidden="true"></span> Roadmap
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="see-also.md">
+                <span class="bi bi-box-arrow-up-right" aria-hidden="true"></span> See Also
+            </NavLink>
+        </div>
     </nav>
 </div>
 
