--- a/src/SCClassicalPlanning.Documentation/Pages/Tools/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/Tools/StateSpaceExplorer.razor
@@ -12,7 +12,7 @@
 <h3>State Space Explorer - Blocks World</h3>
 
 <p>
-    An demonstration of the state space representation types to be found in the `SCClassicalPlanning.Planning.StateAndGoalSpace` namespace.
+    A demonstration of the state space representation types to be found in the `SCClassicalPlanning.Planning.StateAndGoalSpace` namespace.
     Yes, this is ugly and raw - will improve on it gradually.
     Starting from the initial state of the problem (the problem being hard-coded as the "blocks world" Sussman anomaly example depicted in the package icon for the mo), explore the state space by clicking on the action to apply.
     NB: Collapses down the loop if the same edge is navigated twice. 
@@ -24,14 +24,14 @@
     <li>
         @RenderState(problem.InitialState)
         <ul>
-            @foreach (var possibleEdge in RootNode.Edges)
+            @foreach (var edge in new StateSpaceNode(problem, problem.InitialState).Edges)
             {
                 <li>
                     <a href="#"
-                       style="@(possibleEdge.Equals(path.First?.Value) ? "font-weight:bold" : "")"
-                       @onclick="@(() => { path.Clear(); path.AddLast(possibleEdge); })" 
+                       style="@(edge.Equals(path.First?.Value) ? "font-weight:bold" : "")"
+                       @onclick="@(() => ExploreEdge(null, edge))"
                        @onclick:preventDefault="true" 
-                       @onclick:stopPropagation="true">@possibleEdge.ToString()</a>
+                       @onclick:stopPropagation="true">@edge.ToString()</a>
                 </li>
             }
         </ul>
@@ -39,20 +39,20 @@
 
     @for (var n = path.First; n != null; n = n.Next)
     {
-        var edge = n.Value;
+        var stateNode = n.Value.To;
         var nextExploredEdge = n.Next?.Value;
 
         <li>
-            @RenderState(edge.To.State)
+            @RenderState(stateNode.State)
             <ul>
-                @foreach (var possibleEdge in edge.To.Edges)
+                @foreach (var edge in stateNode.Edges)
                 {
                     <li>
                         <a href="#"
-                           style="@(possibleEdge.Equals(nextExploredEdge) ? "font-weight:bold" : "")"
-                           @onclick="@(() => ExploreEdge(edge, possibleEdge))"
+                           style="@(edge.Equals(nextExploredEdge) ? "font-weight:bold" : "")"
+                           @onclick="@(() => ExploreEdge(n, edge))"
                            @onclick:preventDefault="true"
-                           @onclick:stopPropagation="true">@possibleEdge.ToString()</a>
+                           @onclick:stopPropagation="true">@edge.ToString()</a>
                     </li>
                 }
             </ul>
@@ -61,8 +61,9 @@
 </ul>
 
 @code {
-    private readonly LinkedList<StateSpaceEdge> path = new();
     private readonly Problem problem = BlocksWorld.ExampleProblem;
+    private readonly LinkedList<StateSpaceEdge> path = new();
+
     ////private readonly InvariantInspector invariants = new(new BackwardChainingKnowledgeBase(new DictionaryClauseStore(new[]
     ////{
     ////    ForAll(X, AreEqual(X, X)),
@@ -71,17 +72,20 @@
     ////    BlocksWorld.Block(new Constant("blockC")),
     ////})));
 
-    private StateSpaceNode RootNode => new(problem, problem.InitialState);
-
-    private void ExploreEdge(StateSpaceEdge priorEdge, StateSpaceEdge edge)
+    private void ExploreEdge(LinkedListNode<StateSpaceEdge>? fromPathNode, StateSpaceEdge edge)
     {
-        var currentLLNode = path.Find(priorEdge);
-        if (currentLLNode != null)
+        if (fromPathNode != null)
         {
-            while (currentLLNode.Next != null)
+            while (fromPathNode.Next != null)
             {
-                path.Remove(currentLLNode.Next);
+                // huh, weird - assumed .net linked lists could just be chopped. 
+                // turns out we have to remove one at a time. might be worth using something else.
+                path.Remove(fromPathNode.Next);
             }
+        }
+        else
+        {
+            path.Clear();
         }
 
         path.AddLast(edge);
