--- a/src/SCClassicalPlanning.Documentation/Pages/Tools/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/Tools/StateSpaceExplorer.razor
@@ -12,8 +12,8 @@
 <h3>State Space Explorer - Blocks World</h3>
 
 <p>
-    A demonstration of the state space representation types to be found in the `SCClassicalPlanning.Planning.StateAndGoalSpace` namespace.
-    Yes, this is ugly and raw - will improve on it gradually.
+    A demonstration of the state space representation types to be found in the `<a href="https://github.com/sdcondon/SCClassicalPlanning/tree/main/src/SCClassicalPlanning/Planning/StateAndGoalSpace">SCClassicalPlanning.Planning.StateAndGoalSpace</a>` namespace.
+    Yes, this isn't very pretty - will improve on it gradually.
     Starting from the initial state of the problem (the problem being hard-coded as the "blocks world" Sussman anomaly example depicted in the package icon for the mo), explore the state space by clicking on the action to apply.
     NB: Collapses down the loop if the same edge is navigated twice. 
     <a href="https://github.com/sdcondon/SCClassicalPlanning/blob/main/src/SCClassicalPlanning.Documentation/Pages/Tools/StateSpaceExplorer.razor">[Source]</a>
