--- a/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
@@ -1,4 +1,4 @@
-﻿@page "/tools/state-space-explorer"
+﻿@page "/lab/state-space-explorer"
 
 @using SCClassicalPlanning
 @using SCClassicalPlanning.ExampleDomains.FromAIaMA;
@@ -15,8 +15,8 @@
     A demonstration of the state space representation types to be found in the <a href="https://github.com/sdcondon/SCClassicalPlanning/tree/main/src/SCClassicalPlanning/Planning/StateAndGoalSpace">SCClassicalPlanning.Planning.StateAndGoalSpace</a> namespace.
     Yes, this isn't very pretty - will improve on it gradually.
     Starting from the initial state of the problem (the problem being hard-coded as the "blocks world" Sussman anomaly example depicted in the package icon for the mo), explore the state space by clicking on the action to apply.
-    <a href="https://github.com/sdcondon/SCClassicalPlanning/blob/main/src/SCClassicalPlanning.Documentation/Pages/Tools/StateSpaceExplorer.razor">[Source]</a>
-    <a href="#" @onclick="@(() => { path.Clear(); })" @onclick:preventDefault="true" @onclick:stopPropagation="true">[Reset]</a>
+    <a href="https://github.com/sdcondon/SCClassicalPlanning/blob/main/src/SCClassicalPlanning.Documentation/Pages/Tools/StateSpaceExplorer.razor">[Page Source]</a>
+    <a href="#" @onclick="@(path.Clear)" @onclick:preventDefault="true" @onclick:stopPropagation="true">[Reset]</a>
 </p>
 
 <ol>
@@ -25,7 +25,7 @@
     {
         <li>
             @{
-                // this wouldn't be needed if we had richer formatting functionality..
+                // richer formatting functionality could make this more succinct, which would be nice..
                 var stateElements = stateNode.State.Elements
                     ////.Where(e => !invariants.IsTrivial(e))
                     .OrderBy(e => e.Symbol.ToString())
@@ -73,7 +73,7 @@
     {  
         if (lastPathNode != null)
         {
-            // huh, weird - assumed .net linked lists could just be chopped.
+            // huh, weird - i thought .net linked lists could just be chopped.
             // turns out we have to remove nodes one at a time.
             while (lastPathNode.Next != null)
             {
