Refactored example domain namespaces - replaced 'FromAIaMA' (not really important) with 'AsCode' (will become significant once I add 'AsPDDL' or similar).

--- a/src/SCClassicalPlanning.Documentation/Pages/lab/GoalSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/GoalSpaceExplorer.razor
@@ -1,7 +1,7 @@
 ﻿@page "/lab/goal-space-explorer"
 
 @using SCClassicalPlanning
-@using SCClassicalPlanning.ExampleDomains.FromAIaMA;
+@using SCClassicalPlanning.ExampleDomains.AsCode;
 @using SCClassicalPlanning.Planning.StateAndGoalSpace;
 
 <h3>Goal Space Explorer - Blocks World</h3>
